--- a/CBSE.html
+++ b/CBSE.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Entrance Books</title>
+		<title>CBSE</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -29,8 +29,13 @@
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="#one"><p class="animated fadeInRight">Entrance</p></a></li>
-						<li><a href="#two"><p class="animated fadeInLeft">Contact</p></a></li>
+						<li><a href="#one"><p class="animated fadeInRight">Mathematics</p></a></li>
+						<li><a href="#two"><p class="animated fadeInLeftt">Science</p></a></li>
+						<li><a href="#three"><p class="animated fadeInRight">Hindi</p></a></li>
+						<li><a href="#four"><p class="animated fadeInRight">English</p></a></li>
+						<li><a href="#five"><p class="animated fadeInRight">Social Science</p></a></li>
+						<li><a href="#six"><p class="animated fadeInRight">Information Technology</p></a></li>
+						<li><a href="#seven"><p class="animated fadeInRight">Contact</p></a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -53,10 +58,66 @@
 						<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names..." title="Type in a name">
 						<div class="container">
 							<div class="table-wrapper">
-								<table id="myTable">
+								<table id="myTable">	
 									<thead section id="one">
 										<tr>
-											<th><h3>Entrance</h3></th>
+											<th><h3>Mathematics</h3></th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td>Place the book name here</td>
+											<td><a href="#place the drive link here" class="button primary icon solid fa-download">PDF</a></td>
+										</tr>
+									</tbody>
+									<br>	
+									<thead section id="two">
+										<tr>
+											<th><h3>Science</h3></th>	
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td>Place the book name here</td>
+											<td><a href="#place the drive link here" class="button primary icon solid fa-download">PDF</a></td>
+										</tr>
+									</tbody><thead section id="three">
+										<tr>
+											<th><h3>Hindi</h3></th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td>Place the book name here</td>
+											<td><a href="#place the drive link here" class="button primary icon solid fa-download">PDF</a></td>
+										</tr>
+									</tbody>
+									<br>	
+									<thead section id="four">
+										<tr>
+											<th><h3>English</h3></th>	
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td>Place the book name here</td>
+											<td><a href="#place the drive link here" class="button primary icon solid fa-download">PDF</a></td>
+										</tr>
+									</tbody><thead section id="five">
+										<tr>
+											<th><h3>Social Science</h3></th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td>Place the book name here</td>
+											<td><a href="#place the drive link here" class="button primary icon solid fa-download">PDF</a></td>
+										</tr>
+									</tbody>
+									<br>	
+									<thead section id="six">
+										<tr>
+											<th><h3>Information Technology</h3></th>	
 										</tr>
 									</thead>
 									<tbody>
@@ -71,8 +132,8 @@
 					</section>
 
 					
-					<!-- two --> 
-					<section id="two"> 
+					<!-- seven --> 
+					<section id="seven"> 
 						<div class="container"> 
 						<h3>Contact Us</h3> 
 						<textarea placeholder="Enter your message"></textarea> 
