--- a/Economics Notes.html
+++ b/Economics Notes.html
@@ -6,17 +6,18 @@
 -->
 <html>
 	<head>
-		<title>Entrance Books</title>
+		<title>Economics Notes</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="assets/css/extra.css" />
 		<link rel="stylesheet" href="animate.min.css">
 		<link rel="shortcut icon" href="images/icon.png" type="image/x-icon">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+		<link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
 		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
 		<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
 		<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+
 	</head>
 	<body class="is-preload">
 
@@ -29,8 +30,9 @@
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="#one"><p class="animated fadeInRight">Entrance</p></a></li>
-						<li><a href="#two"><p class="animated fadeInLeft">Contact</p></a></li>
+						<li><a href="#one"><p class="animated fadeInRight">CISCE</p></a></li>
+						<li><a href="#two"><p class="animated fadeInLeft">CBSE</p></a></li>
+						<li><a href="#three"><p class="animated fadeInRight">Contact</p></a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -56,7 +58,19 @@
 								<table id="myTable">
 									<thead section id="one">
 										<tr>
-											<th><h3>Entrance</h3></th>
+											<th><h3>CISCE</h3></th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td>Place the book name here</td>
+											<td><a href="#place the drive link here" class="button primary icon solid fa-download">PDF</a></td>
+										</tr>
+									</tbody>
+									<br>	
+									<thead section id="two">
+										<tr>
+											<th><h3>CBSE</h3></th>	
 										</tr>
 									</thead>
 									<tbody>
@@ -71,8 +85,8 @@
 					</section>
 
 					
-					<!-- two --> 
-					<section id="two"> 
+					<!-- three --> 
+					<section id="three"> 
 						<div class="container"> 
 						<h3>Contact Us</h3> 
 						<textarea placeholder="Enter your message"></textarea> 
