--- a/Physical Education Books.html
+++ b/Physical Education Books.html
@@ -6,12 +6,13 @@
 -->
 <html>
 	<head>
-		<title>Commerce Papers</title>
+		<title>Physical Education Papers</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="assets/css/extra.css" />
 		<link rel="stylesheet" href="animate.min.css">
+		<link rel="shortcut icon" href="images/icon.png" type="image/x-icon">s
 		<link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
 		<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
 		<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
