New Updates from Kaustav

--- a/index.html
+++ b/index.html
@@ -154,23 +154,24 @@
 	}
 	.wrapper .static-txt
 	{
-		color: rgb(97, 97, 97);
+		color: rgb(97, 97, 97);;
 		font-size: 30px;
-		font-weight: 200;
+		font-weight: 400;
 	}
 	.wrapper .dynamic-txts
 	{
-		margin-left: 2px;
+		margin-left: 15px;
 	}
 	.dynamic-txts li
 	{
 		list-style: none;
 		color: rgb(74,202,169);
+		font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 		font-size: 30px;
-		font-weight: 300;
+		font-weight: 500;
 		top: 0;
 		position: relative;
-		animation: slide 12s steps(2) infinite;
+		animation: slide 12s steps(4) infinite;
 	}
 	@keyframes slide
 	{
@@ -191,7 +192,7 @@
 		width: 100%;
 		background-color: white;
 		border-left: 2px solid rgb(74,202,169);
-		animation: typing 3s steps(15) infinite;
+		animation: typing 3s steps(20) infinite;
 	}
 	@keyframes typing
 	{
@@ -263,8 +264,10 @@
 								<div class="container">
 									<h2 class="animated zoomIn"><b>BOOKS</b></h2>
 									<div class="wrapper">
-										<div class="static-txt"><i>Our highlighted books:</i></div>
+										<div class="static-txt"><i>Our Highlighted Books:</i></div>
 										<ul class="dynamic-txts">
+											<li><span><a href="https://drive.google.com/folderview?id=1XwKMlE1ZPJ8wU50DTI29ipMI73fD1fl4">Arihant JEE</a></span></li>
+											<li><span><a href="https://drive.google.com/folderview?id=1YBariOhH_8L2v0s7apO4bwWfoYCQC-Vs">Arihant NEET</a></span></li>
 											<li><span><a href="https://drive.google.com/folderview?id=1XwKMlE1ZPJ8wU50DTI29ipMI73fD1fl4">Arihant JEE</a></span></li>
 											<li><span><a href="https://drive.google.com/folderview?id=1YBariOhH_8L2v0s7apO4bwWfoYCQC-Vs">Arihant NEET</a></span></li>
 										</ul>
