New Update from Kaustav

--- a/CISCE.html
+++ b/CISCE.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Accounts Notes</title>
+		<title>CISCE</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -30,9 +30,10 @@
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="#one"><p class="animated fadeInRight">CISCE</p></a></li>
-						<li><a href="#two"><p class="animated fadeInLeft">CBSE</p></a></li>
-						<li><a href="#three"><p class="animated fadeInRight">Contact</p></a></li>
+						<li><a href="#one"><p class="animated fadeInRight">Books</p></a></li>
+						<li><a href="#two"><p class="animated fadeInLeft">Notes</p></a></li>
+						<li><a href="#three"><p class="animated fadeInRight">Papers</p></a></li>
+						<li><a href="#four"><p class="animated fadeInLeft">Contact</p></a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -58,7 +59,7 @@
 								<table id="myTable">
 									<thead section id="one">
 										<tr>
-											<th><h3>CISCE</h3></th>
+											<th><h3>Books</h3></th>
 										</tr>
 									</thead>
 									<tbody>
@@ -70,7 +71,18 @@
 									<br>	
 									<thead section id="two">
 										<tr>
-											<th><h3>CBSE</h3></th>	
+											<th><h3>Notes</h3></th>	
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td>Place the book name here</td>
+											<td><a href="#place the drive link here" class="button primary icon solid fa-download">PDF</a></td>
+										</tr>
+									</tbody>
+									<thead section id="three">
+										<tr>
+											<th><h3>Papers</h3></th>	
 										</tr>
 									</thead>
 									<tbody>
@@ -85,8 +97,8 @@
 					</section>
 
 					
-					<!-- three --> 
-					<section id="three"> 
+					<!-- Four --> 
+					<section id="four"> 
 						<div class="container"> 
 						<h3>Contact Us</h3> 
 						<textarea placeholder="Enter your message"></textarea> 
