--- a/Business Studies Notes.html
+++ b/Business Studies Notes.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Business Studies Books</title>
+		<title>Business Studies Notes</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
