--- a/Entrance Books.html
+++ b/Entrance Books.html
@@ -61,8 +61,24 @@
 									</thead>
 									<tbody>
 										<tr>
-											<td>Place the book name here</td>
-											<td><a href="#place the drive link here" class="button primary icon solid fa-download">PDF</a></td>
+											<td>Pearson IIT Foundation Series</td>
+											<td><a href="https://drive.google.com/drive/folders/1ZsfotrTCsLTwKgGFB6TXX5Z0OaPQfMGs?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+										</tr>
+										<tr>
+											<td>Arihant Crash Course Books Jee In 40 Days</td>
+											<td><a href="https://drive.google.com/drive/folders/1XwKMlE1ZPJ8wU50DTI29ipMI73fD1fl4?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+										</tr>
+										<tr>
+											<td>Arihant Crash Course Books Neet In 40 Days</td>
+											<td><a href="https://drive.google.com/drive/folders/1YBariOhH_8L2v0s7apO4bwWfoYCQC-Vs?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+										</tr>
+										<tr>
+											<td>Target Neet All In One Guide</td>
+											<td><a href="https://drive.google.com/file/d/1TYjZEyX0Y1Als1-m-zxZ4a1mfI9U025b/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+										</tr>
+										<tr>
+											<td>Jee Main January 2019 Solved Papers</td>
+											<td><a href="https://drive.google.com/file/d/1Xuf6XCDl8OP5ZYwxMMWBO-1MYN-8Ctci/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
 										</tr>
 									</tbody>
 								</table>
