--- a/Computer Books.html
+++ b/Computer Books.html
@@ -74,8 +74,32 @@
 									</thead>
 									<tbody>
 										<tr>
-											<td>Place the book name here</td>
-											<td><a href="#place the drive link here" class="button primary icon solid fa-download">PDF</a></td>
+											<td>Term 1 Computer Science Class 12 Books</td>
+											<td><a href="https://drive.google.com/drive/folders/1MPPfQuATajsgOCxawu8ViiioJa_K6CoA?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+										</tr>
+										<tr>
+											<td>Term 1 Information Technology Class 12</td>
+											<td><a href="https://drive.google.com/drive/folders/1O9r-zXgyC382qkRtMxb1INNhqzlTnqrK?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+										</tr>
+										<tr>
+											<td>Computer Science Python Sumita Arora Class 12</td>
+											<td><a href="https://drive.google.com/file/d/14ypYoBrhpzXrKgs-KR-oWtcprr4GUgDx/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+										</tr>
+										<tr>
+											<td>Computer Science Python Preeti Arora Class 12</td>
+											<td><a href="https://drive.google.com/file/d/13zka_gumPfuQlVeIGwv2n_zQ2zbptEiR/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+										</tr>
+										<tr>
+											<td>Information Technology Preeti Arora Class 12</td>
+											<td><a href="https://drive.google.com/file/d/1uXP_BUQi1znCp61wLRbc6or6VyAv0Dy4/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+										</tr>
+										<tr>
+											<td>Ncert Class 12 Computer Science</td>
+											<td><a href="https://drive.google.com/drive/folders/1PS4b2NVJDgg7IxKhPjcsU3GF1yCHrM9U?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+										</tr>
+										<tr>
+											<td>Information Technology Preeti Arora Class 11</td>
+											<td><a href="https://drive.google.com/file/d/13yb8hvj1lmbYpe8v_kNkL5Cj9bbY7XzF/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
 										</tr>
 									</tbody>
 								</table>
