--- a/Computer Notes.html
+++ b/Computer Notes.html
@@ -62,6 +62,18 @@
 									</thead>
 									<tbody>
 										<tr>
+											<td>Boolean Algebra Class 11 & 12</td>
+											<td><a href="https://drive.google.com/file/d/1FS05ll7v8JJBRapC7mBWpsngMZFabO-5/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+										</tr>
+										<tr>
+											<td>Propositional Logic Class 11 & 12</td>
+											<td><a href="https://drive.google.com/file/d/1-CcQR2C3bUJCHZcLJ0Rx_RPbAy4DDaYk/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+										</tr>
+										<tr>
+											<td>K Maps Class 11 & 12</td>
+											<td><a href="https://drive.google.com/file/d/1-Fhn5-JqoJtZJCifpszMNoH95zN6Ih49/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+										</tr>
+										<tr>
 											<td>Place the book name here</td>
 											<td><a href="#place the drive link here" class="button primary icon solid fa-download">PDF</a></td>
 										</tr>
@@ -73,6 +85,14 @@
 										</tr>
 									</thead>
 									<tbody>
+										<tr>
+											<td>Working With Functions Class 12</td>
+											<td><a href="https://drive.google.com/file/d/1PSa69pj9kJOc238KKvClQOaieOj7gJDu/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+										</tr>
+										<tr>
+											<td>Last Minute Revision Notes Class 12</td>
+											<td><a href="https://drive.google.com/file/d/157WomfUFJh2EUAWuWkYC3fAnCp3InXNV/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+										</tr>
 										<tr>
 											<td>Place the book name here</td>
 											<td><a href="#place the drive link here" class="button primary icon solid fa-download">PDF</a></td>
