--- a/Mathematics Books.html
+++ b/Mathematics Books.html
@@ -63,8 +63,40 @@
 										</thead>
 										<tbody>
 											<tr>
-												<td>Place the book name here</td>
-												<td><a href="#place the drive link here" class="button primary icon solid fa-download">PDF</a></td>
+												<td>Arihant Skills In Mathematics For Mains & Advanced</td>
+												<td><a href="https://drive.google.com/drive/folders/1IJYqBqdZLgA3rZJlCD1ySojGqd9jnzgA?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+											</tr>
+											<tr>
+												<td>Cengage Mathematics</td>
+												<td><a href="https://drive.google.com/drive/folders/13gpTfNqg-p_pRNFAhcRSH8qlXgh0imnD?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+											</tr>
+											<tr>
+												<td>Objective R.D. Sharma For Jee</td>
+												<td><a href="https://drive.google.com/drive/folders/1-bZr6oDOQJ4uEAg9Zq-UBJlaPbsZY9ps?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+											</tr>
+											<tr>
+												<td>Master Resource Book For Jee Mains</td>
+												<td><a href="https://drive.google.com/file/d/1I5wA8EvxuvoZ2iYtT7tJ5kqsJCxoDhYF/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+											</tr>
+											<tr>
+												<td>Complete Companion For Mathematics For Jee Mains Volume 1</td>
+												<td><a href="https://drive.google.com/file/d/10w9et-a30QbDQFEa0QbRMZNa6gKAD6Ii/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+											</tr>
+											<tr>
+												<td>Arihant Handbook Of Mathematics For Jee</td>
+												<td><a href="https://drive.google.com/file/d/17SGmVsx7i7Wqyqm47_KCi-fUm52KIzxW/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td> 
+											</tr>
+											<tr>
+												<td>IIT Jee Advanced Comprehensive Matthematics</td>
+												<td><a href="https://drive.google.com/file/d/1JbU-s-3-_wNKgbAaKmwafY51nIpj4bI2/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+											</tr>
+											<tr>
+												<td>Problem Plus In Mathematics By A.Das Gupta</td>
+												<td><a href="https://drive.google.com/file/d/1350-fTtC4QH7lFVlt8ASC6uauaBe8m8k/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+											</tr>
+											<tr>
+												<td>S.K. Goyal Arihant Objective Mathematics</td>
+												<td><a href="https://drive.google.com/file/d/1xWu4P7patieR2fK3ptnxXvRM6JDzY02g/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
 											</tr>
 										</tbody>
 										<br>	
@@ -74,6 +106,18 @@
 											</tr>
 										</thead>
 										<tbody>
+											<tr>
+												<td>Isc Mathematics Book For Class 11</td>
+												<td><a href="https://drive.google.com/file/d/1-DZ3cWfd2PhtHr5sjubgVWr21GXeB9Ve/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+											</tr>
+											<tr>
+												<td>Understanding Isc Mathematics For Class 11</td>
+												<td><a href="https://drive.google.com/file/d/1-4guRYec4t6G8wcoNxX_RJXJC5dXudbq/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+											</tr>
+											<tr>
+												<td>Understanding Isc Mathematics For Class 12</td>                                        
+												<td><a href="https://drive.google.com/file/d/1-Fwp49jvDsi-hsBM0dlpc8gMz45mRT88/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+											</tr>
 											<tr>
 												<td>Place the book name here</td>
 												<td><a href="#place the drive link here" class="button primary icon solid fa-download">PDF</a></td>
@@ -87,8 +131,24 @@
 										</thead>
 										<tbody>
 											<tr>
-												<td>Place the book name here</td>
-												<td><a href="#place the drive link here" class="button primary icon solid fa-download">PDF</a></td>
+												<td>Ncert Exemplar Class 11 & 12 Maths</td>
+												<td><a href="https://drive.google.com/drive/folders/1I7gSIXB9_l9VmSd7d1kpgHqVbwfk3VX9?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+											</tr>
+											<tr>
+												<td>R.S. Aggarwal Class 12(Pls Mail Us For This Book)</td>
+												<td><a href="" class="button primary icon solid fa-download">PDF</a></td>
+											</tr>
+											<tr>
+												<td>Ncert Class 12 Book</td>
+												<td><a href="https://drive.google.com/drive/folders/1YNTf-nMyq4imZbPVm3WyIhm_q6b207Or?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+											</tr>
+											<tr>
+												<td>Ncert Class 11 Book</td>
+												<td><a href="https://drive.google.com/file/d/11AMIuWMCojFovg-PLvjg54eKCYwgxmx1/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+											</tr>
+											<tr>
+												<td>Term 2 Books For Class 12 Maths</td>
+												<td><a href="https://drive.google.com/drive/folders/1PmNnDBOhbII2nk7ho1z0B4lVESCwHyjs?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
 											</tr>
 										</tbody>
 									</table>
