--- a/Chemistry Books.html
+++ b/Chemistry Books.html
@@ -63,8 +63,16 @@
 									</thead>
 									<tbody>
 										<tr>
-											<td>Place the book name here</td>
-											<td><a href="#place the drive link here" class="button primary icon solid fa-download">PDF</a></td>
+											<td>IIT JEE Super Course</td>
+											<td><a href="#https://drive.google.com/drive/folders/1D6wVbJNn0pyWxSE0YZkU2pHRbYDFpX69?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+										</tr>
+										<tr>
+											<td>VK Jaiswal Inorganic Chemistry</td>
+											<td><a href="#https://drive.google.com/drive/folders/15sil6mGZCcXrMpgvXcOTE2M7h9zwM8a3?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+										</tr>
+										<tr>
+											<td>Organic Chemistry- Himanshu Pandey </td>
+											<td><a href="#https://drive.google.com/file/d/138txf6uktVVrWV0g1DkA58ZYkgFM0IDs/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
 										</tr>
 									</tbody>
 									<br>	
@@ -87,8 +95,20 @@
 									</thead>
 									<tbody>
 										<tr>
-											<td>Place the book name here</td>
-											<td><a href="#place the drive link here" class="button primary icon solid fa-download">PDF</a></td>
+											<td>Master the NCERT</td>
+											<td><a href="#https://drive.google.com/drive/folders/1Ib6cCiFBFZa2QPWS--T1y6naXbODpAHK?usp=sharinge" class="button primary icon solid fa-download">PDF</a></td>
+										</tr>
+										<tr>
+											<td>NCERT Exemplar</td>
+											<td><a href="#https://drive.google.com/drive/folders/1IhPpJbEicbX9pJmsa2WjQ3TPjkCOglTR?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+										</tr>
+										<tr>
+											<td>Term 1</td>
+											<td><a href="#https://drive.google.com/drive/folders/1nfZ8qqyjxFu5NNSCJCoO_MEc1sSRMKhK?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+										</tr>
+										<tr>
+											<td>Term 2</td>
+											<td><a href="#https://drive.google.com/drive/folders/1P7W-Lw4AWzbA86AcO2pV8u_srMuHfeRM?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
 										</tr>
 									</tbody>
 								</table>
