--- a/Chemistry Papers.html
+++ b/Chemistry Papers.html
@@ -63,7 +63,7 @@
 									<tbody>
 										<tr>
 											<td>Most Difficult Previous Year Question Papers</td>
-											<td><a href="#https://drive.google.com/file/d/10kEccIOc0IWByv9KjOVlqW2TKt4zxcZn/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+											<td><a href="https://drive.google.com/file/d/10kEccIOc0IWByv9KjOVlqW2TKt4zxcZn/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
 										</tr>
 									</tbody>
 									<br>	
@@ -75,11 +75,11 @@
 									<tbody>
 										<tr>
 											<td>Balaji Chemistry</td>
-											<td><a href="#https://drive.google.com/file/d/1Ip7esXS1RULR7I-2aLENplZvGAXMt-qK/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+											<td><a href="https://drive.google.com/file/d/1Ip7esXS1RULR7I-2aLENplZvGAXMt-qK/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
 										</tr>
 										<tr>
 											<td>Most Likely Question Bank Chapter wise Topic wise- Class 12</td>
-											<td><a href="#https://drive.google.com/file/d/16Wd_vH_YzeT2GqGDDJGkFi5SSXbQrQcC/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+											<td><a href="https://drive.google.com/file/d/16Wd_vH_YzeT2GqGDDJGkFi5SSXbQrQcC/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
 										</tr>
 									</tbody>
 									<br>	
@@ -91,7 +91,7 @@
 									<tbody>
 										<tr>
 											<td>Chapterwise Question bank(Solutions) Class 11 & 12</td>
-											<td><a href="#https://drive.google.com/file/d/10J-JpRxOsFaNh7fjigE15EWhCFElT-ws/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+											<td><a href="https://drive.google.com/file/d/10J-JpRxOsFaNh7fjigE15EWhCFElT-ws/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
 										</tr>
 									</tbody>
 								</table>
