--- a/Economics Books.html
+++ b/Economics Books.html
@@ -74,8 +74,20 @@
 									</thead>
 									<tbody>
 										<tr>
-											<td>Place the book name here</td>
-											<td><a href="#place the drive link here" class="button primary icon solid fa-download">PDF</a></td>
+											<td>V.K. Ohri MacroEcnomics Class 12</td>
+											<td><a href="https://drive.google.com/file/d/1jhzq1IF-CX5MufdqP4lAYTZcSKL0x9G3/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+										</tr>
+										<tr>
+											<td>Sandeep Garg Class 12 MacroEcnomics</td>
+											<td><a href="https://drive.google.com/file/d/1jizU3mu2mwK5vwlfvP28oXYe-ok-3IfQ/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+										</tr>
+										<tr>
+											<td>V.K. Ohri MicroEcnomics Class 11</td>
+											<td><a href="https://drive.google.com/file/d/1pDwK-qdhi_vvnXVU6qnrU9Obz8wk_Hlw/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+										</tr>
+										<tr>
+											<td>Indian Ecnomics</td>
+											<td><a href="https://drive.google.com/file/d/1pJeWa5grkppayhq-63UYgp1jYb7_d985/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
 										</tr>
 									</tbody>
 								</table>
