--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 	.wrapper .static-txt
 	{
 		color: rgb(97, 97, 97);;
-		font-size: 30px;
+		font-size: 1.2rem;
 		font-weight: 400;
 	}
 	.wrapper .dynamic-txts
