--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 		display: flex;
 		line-height: 90px;
 		height: 90px;
-		overflow: hidden;
+		/*overflow: hidden;*/
 	}
 	.wrapper .static-txt
 	{
