--- a/index.html
+++ b/index.html
@@ -150,12 +150,12 @@
 		display: flex;
 		line-height: 90px;
 		height: 90px;
-		/*overflow: hidden;*/
+		overflow: hidden;
 	}
 	.wrapper .static-txt
 	{
 		color: rgb(97, 97, 97);;
-		font-size: 1.2rem;
+		font-size: 1rem;
 		font-weight: 400;
 	}
 	.wrapper .dynamic-txts
