--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 		list-style: none;
 		color: rgb(74,202,169);
 		font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-		font-size: 30px;
+		font-size: 1rem;
 		font-weight: 500;
 		top: 0;
 		position: relative;
