--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 	.wrapper .static-txt
 	{
 		color: rgb(97, 97, 97);;
-		font-size: 1rem;
+		font-size: 1.2rem;
 		font-weight: 400;
 	}
 	.wrapper .dynamic-txts
@@ -167,7 +167,7 @@
 		list-style: none;
 		color: rgb(74,202,169);
 		font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-		font-size: 1rem;
+		font-size: 1.2rem;
 		font-weight: 500;
 		top: 0;
 		position: relative;
@@ -206,7 +206,12 @@
 			left: 0;
 		}
 	}
-	</style>
+           @media only screen and (min-width:600px){
+              html{
+                font-size:25px;
+}
+}
+   	</style>
 	<body class="is-preload">
 
 		<!-- Header -->
