--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 	{
 		content: "";
 		position: absolute;
-		height: 100%;
+		height:1.2rem;
 		width: 100%;
 		background-color: white;
 		border-left: 2px solid rgb(74,202,169);
