--- a/index.html
+++ b/index.html
@@ -190,6 +190,8 @@
 		position: absolute;
 		height:1.2rem;
 		width: 100%;
+                top:50%;
+                transform:translate(0,-50%);
 		background-color: white;
 		border-left: 2px solid rgb(74,202,169);
 		animation: typing 3s steps(20) infinite;
