--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
 	.dynamic-txts li
 	{
 		list-style: none;
+                margin-left:-5px;
 		color: rgb(74,202,169);
 		font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 		font-size: 1.2rem;
@@ -211,6 +212,11 @@
            @media only screen and (min-width:600px){
               html{
                 font-size:25px;
+}
+}
+          @media only screen and (max-width:480px){
+            html{
+              font-size:12px;
 }
 }
    	</style>
