--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 		height:1.2rem;
 		width: 100%;
                 top:50%;
-                transform:translate(0,-50%);
+                transform:translate(-5px,-50%);
 		background-color: white;
 		border-left: 2px solid rgb(74,202,169);
 		animation: typing 3s steps(20) infinite;
