--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
 
 		.blink
 		{
-			font-size: 20px;
-			margin-left: 85px;
-			margin-right: 150px;
+			font-size:1.2rem;
+			margin-left:10%;
+			margin-right:13%;
 			font-family: Trebuchet MS;
 			font-weight: bold;
 			color: #ff0000;
